--- a/.github/workflows/worker.yml
+++ b/.github/workflows/worker.yml
@@ -15,37 +15,47 @@ jobs:
 
           total=0
           success=0
+          round=0
 
-          echo "Starting 10 HEAD requests per second to $TARGET"
+          echo "Starting 500 HEAD requests per second to $TARGET"
 
           while true; do
-            start_time=$(date +%s)
+            round=$((round+1))
+
+            round_total=0
+            round_success=0
 
             for i in {1..500}; do
               status=$(curl -s -o /dev/null -w "%{http_code}" -I "$TARGET")
 
               total=$((total+1))
+              round_total=$((round_total+1))
 
-              if [[ "$status" =~ ^2|^3 ]]; then
+              if [[ "$status" =~ ^(2|3) ]]; then
                 success=$((success+1))
+                round_success=$((round_success+1))
               fi
             done
 
-            # 每10秒输出一次统计
-            now=$(date +%s)
-            if (( now % 10 == 0 )); then
-              if (( total > 0 )); then
-                rate=$(awk "BEGIN {printf \"%.2f\", ($success/$total)*100}")
-              else
-                rate=0
-              fi
-
-              echo "--------------------------------------"
-              echo "Total Requests: $total"
-              echo "Successful: $success"
-              echo "Success Rate: $rate %"
-              echo "--------------------------------------"
+            # 本轮成功率
+            if (( round_total > 0 )); then
+              round_rate=$(awk "BEGIN {printf \"%.2f\", ($round_success/$round_total)*100}")
+            else
+              round_rate=0
             fi
+
+            # 总体成功率
+            if (( total > 0 )); then
+              total_rate=$(awk "BEGIN {printf \"%.2f\", ($success/$total)*100}")
+            else
+              total_rate=0
+            fi
+
+            echo "--------------------------------------"
+            echo "Round: $round"
+            echo "Round Success Rate: $round_rate % ($round_success/$round_total)"
+            echo "Total Success Rate: $total_rate % ($success/$total)"
+            echo "--------------------------------------"
 
             sleep 1
           done
